--- a/index.html
+++ b/index.html
@@ -1231,7 +1231,7 @@
     <div class="container">
         <!-- Header -->
         <div class="header">
-            <h1>🏛️ Lakshya </h1>
+            <h1> 🎯 Lakshya </h1>
             <p>Advanced UPSC Quiz Platform for Prelims & Mains Preparation</p>
         </div>
 
