--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pragyaan 2.0 - UPSC Quiz Platform</title>
+    <title> Lakshya - UPSC Quiz Platform</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <style>
        /* Premium Dual Theme CSS for Pragyaan 2.0 with Digital Noise Texture */
